deprecated-k8s-specifications/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  # type: NodePort
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 4200
    targetPort: 4200
  selector:
    app: frontend1
