deprecated-k8s-specifications/survey-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: survey-ingress
  # namespace: resource-ingress
spec:
  # tls:
  # - hosts: 
  #   - surveyapp.com
  #   secretName: survey-secret-tls
  rules:
  - host: surveyapp.com
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: frontend-service
            port:
              number: 4200
      - path: /survey
        pathType: Prefix  
        backend:
          service:
            name: restapi-service
            port:
              number: 8000
      - path: /admin
        pathType: Prefix  
        backend:
          service:
            name: restapi-service
            port:
              number: 8000
  # - host: api.surveyapp.com   
  #   http:   
  #     paths:    
  #     - path: /
  #       pathType: Prefix  
  #       backend:
  #         service:
  #           name: restapi-service
  #           port:
  #             number: 8000
