deprecated-k8s-specifications/policy-restapi-allow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: restapi-allow

spec:
  podSelector:
    matchLabels:
      app: restapi
      role: api
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: frontend
